initial application commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Horizons - Learn About Artificial Intelligence</title>
+    <title>AI Academy - Learn About Artificial Intelligence</title>
     <link rel="stylesheet" href="/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
@@ -11,8 +11,8 @@
     <header class="header">
       <nav class="nav-container">
         <div class="logo">
-          <img src="https://api.iconify.design/solar:robot-bold.svg?color=%234ade80" alt="AI Horizons Logo">
-          AI Horizons
+          <img src="https://api.iconify.design/solar:robot-bold.svg?color=%234ade80" alt="AI Academy Logo">
+          AI Academy
         </div>
         <div class="menu-toggle" id="menuToggle">
           <span></span>
