--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Academy - Learn About Artificial Intelligence</title>
+    <title>AI Horizons - Learn About Artificial Intelligence</title>
     <link rel="stylesheet" href="/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
@@ -11,8 +11,8 @@
     <header class="header">
       <nav class="nav-container">
         <div class="logo">
-          <img src="https://api.iconify.design/solar:robot-bold.svg?color=%234ade80" alt="AI Academy Logo">
-          AI Academy
+          <img src="https://api.iconify.design/solar:robot-bold.svg?color=%234ade80" alt="AI Horizons Logo">
+          AI Horizons
         </div>
         <div class="menu-toggle" id="menuToggle">
           <span></span>
@@ -64,7 +64,7 @@
           <div class="features-grid">
             <div class="feature-card">
               <div class="feature-icon">
-                <img src="https://api.iconify.design/solar:brain-bold.svg?color=%23ffffff" alt="Machine Learning" width="24">
+                <img src="https://api.iconify.design/solar:code-circle-bold.svg?color=%23ffffff" alt="Machine Learning" width="24">
               </div>
               <h3>Machine Learning</h3>
               <p>Learn how algorithms can automatically learn and evolve from data.</p>
@@ -78,7 +78,7 @@
             </div>
             <div class="feature-card">
               <div class="feature-icon">
-                <img src="https://api.iconify.design/solar:chat-bold.svg?color=%23ffffff" alt="NLP" width="24">
+                <img src="https://api.iconify.design/solar:settings-bold.svg?color=%23ffffff" alt="NLP" width="24">
               </div>
               <h3>Natural Language Processing</h3>
               <p>Discover how machines process and understand human language.</p>
@@ -108,7 +108,7 @@
     </main>
 
     <footer class="footer">
-      <p>&copy; 2024 AI Academy. All rights reserved.</p>
+      <p>&copy; 2024 AI Horizons. All rights reserved.</p>
     </footer>
 
     <script type="module" src="/main.js"></script>
