--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <nav class="nav-container">
       <div class="logo">
-        <img src="https://api.iconify.design/solar:robot-bold.svg?color=%234ade80" alt="AI Horizons Logo">
+        <img src="./assets/robot-remote-control-svgrepo-com.svg" alt="AI Horizons Logo" > 
         AI Horizons
       </div>
       <div class="menu-toggle" id="menuToggle">
